# cat

./: .gitignore  README.md  compile_commands.json  setup.bat  setup.sh
archive/: bin.7z  bin64.7z  cmake.7z  tool_bin.7z
base/: CMakeLists.txt
cat/: AABB.cpp  AABB.h  CMakeLists.txt  IFileProvider.h  IRender.h  animation.cpp  animation.h  animationChannel.cpp  animationChannel.h  bufferRefCounter.cpp  bufferRefCounter.h  camera.cpp  camera.h  cat.vcxproj  cgltf_util.c  cgltf_util.h  color.cpp  color.h  component.cpp  component.h  def.h  eglWindow.cpp  eglWindow.h  env.cpp  env.h  gltf_raw_render.cpp  gltf_raw_render.h  gltf_type.h  grid.cpp  grid.h  keyFrame.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  names.cpp  names.h  object.cpp  (+41 more)
catBase/: CMakeLists.txt  yaml.cpp  yaml.h
catBase/cat/: box.h  string.h  vertex.cpp
catVulkanRender/: CMakeLists.txt  DescriptorDataKey.cpp  DescriptorDataKey.h  catVulkanRender.sln  catVulkanRender.vcxproj  commandAllocator.cpp  deviceInfo.h  load_png.cpp  load_png.h  pipelineKey.cpp  pipelineKey.h  simplevulkan.cpp  simplevulkan.h  uniformDataKey.cpp  uniformDataKey.h  vulkanRender.cpp  vulkanRender.h
catbase/: CMakeLists.txt
catbase/cat/: IRender.h  box.cpp  box.h  camera.cpp  camera.h  cgltf.c  cgltf_util.c  color.h  def.h  keyFrame.cpp  transform.cpp
catui/: CMakeLists.txt
catui/cat/: imguiex.h
catvulkan/: CMakeLists.txt  descriptorAllocator.cpp  descriptorAllocator.h  load_png.cpp  simplevulkan.cpp
catvulkan/cat/: DescriptorDataKey.cpp  DescriptorDataKey.h  commandAllocator.cpp  commandAllocator.h  descriptorAllocator.cpp  descriptorAllocator.h  load_png.cpp  pipelineKey.cpp  simplevulkan.cpp  simplevulkan.h  vulkanRender.cpp  vulkanRender.h
catwindows/: CMakeLists.txt
catwindows/cat/: eglWindow.h
doc/: ai 给出的拆分方案.txt  task.txt  todo.txt  编译 compile build shaderc vulkan.txt
free/gfx/: CMakeLists.txt  base.h  color.cpp  color.h  eglWindow.cpp  eglWindow.h  image.cpp  image.h  shader.cpp  shader.h  vertex.cpp  vertex.h  win32Window.cpp  win32window.h
free/gfx/gfx.xcodeproj/: project.pbxproj
free/gfx/gfx.xcodeproj/project.xcworkspace/xcuserdata/caolei.xcuserdatad/: UserInterfaceState.xcuserstate
free/gfx/gfx.xcodeproj/xcuserdata/caolei.xcuserdatad/xcschemes/: gfx.xcscheme  xcschememanagement.plist
free/glm/: CMakeLists.txt
free/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
free/libimg/: CMakeLists.txt  base.h  image.cpp  image.h
free/rapidyaml/: CMakeLists.txt
free/scl/: CMakeLists.txt  alloc_pool.h  allocator.h  allocator_thread.h  android.cpp  android.h  array.h  assert.cpp  assert.h  backtrace.cpp  backtrace.h  big_int.h  bitdef.h  bitset.h  buffer.cpp  buffer.h  directory.cpp  directory.h  dump.cpp  dump.h  encoding.h  file.cpp  file.h  file_mapping.cpp  file_mapping.h  file_reader.cpp  file_reader.h  frame_lock.cpp  frame_lock.h  function.h  hash_table.h  heap.h  heap_ptr.h  ini_file.cpp  ini_file.h  list.h  log.cpp  log.h  log_define.h  log_file.cpp  (+56 more)
free/scl/scl.xcodeproj/: project.pbxproj
free/scl/scl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
free/scl/scl.xcodeproj/project.xcworkspace/xcuserdata/caolei.xcuserdatad/: UserInterfaceState.xcuserstate
free/scl/scl.xcodeproj/xcuserdata/caolei.xcuserdatad/xcschemes/: scl.xcscheme  xcschememanagement.plist
test/testCatbase/: CMakeLists.txt  main.cpp  testBox.cpp  testBox.h
test/testECS/: CMakeLists.txt  main.cpp
test/testImgui/: CMakeLists.txt  main.cpp
test/testMath/: CMakeLists.txt  main.cpp  temp.txt  test.cpp  test.h  util.cpp  util.h
test/testScl/: CMakeLists.txt  main.cpp  testArray.cpp  testArray.h  testBigInt.cpp  testBigInt.h  testBitset.cpp  testBitset.h  testFile.cpp  testFile.h  testHashTable.cpp  testHashTable.h  testHeap.cpp  testHeap.h  testIniFile.cpp  testIniFile.h  testList.cpp  testList.h  testLog.cpp  testLog.h  testMemory.cpp  testMemory.h  testPString.cpp  testPString.h  testPWString.cpp  testPWString.h  testPath.cpp  testPath.h  testRingBuffer.cpp  testRingBuffer.h  testRingQueue.cpp  testRingQueue.h  testStack.cpp  testStack.h  testString.cpp  testString.h  testString2025.cpp  testString2025.h  testStringFunction.cpp  testStringFunction.h  (+10 more)
test/testScl/test/: a.ini  c.txt  client.ini  file_reader_test1.txt  memoryLog.txt  spot.tab
test/testYaml/: CMakeLists.txt  main.cpp  quickstart.cpp
testCat/: CMakeLists.txt  ImGuizmo.cpp  ImGuizmo.h  client.cpp  client.h  config.cpp  config.h  imguiex.cpp  imguiex.h  main.cpp  mainGUI.cpp  mainGUI.h  main_imgui.cpp  simpleShape.cpp  simpleShape.h  testCat.sln  testCat.vcxproj  testCat.vcxproj.filters  testPrimitive.cpp  testPrimitive.h
testCat/art/: art.7z
testCat/shader/opengles/: default10.vert  default_30.vert
testCat/shader/vulkan/: object.frag  object.vert
tool/: bundle.bat  bundle.py  gen_cursor.bat  generate_testCat.bat  generate_tests.bat  generate_tests_ninja.bat  make_shaderc.bat  setup.py  svnclear.bat  unzip_all.bat
tool/script/: bundle.py  bundle_linux.py  clear.py  find_gbk.py  merge_compile_commands.py  mytool.py  setup.py  setup_linux.py
